# Discord-Welcome-and-Announcement-bot

./: .env  README.md  custom_msg.py  data.json  keep_alive.py  main.py  pyproject.toml
templates/: announce.html  base.html  denied.html  index.html  login.html  success.html
